--- a/doc/strategies.tex
+++ b/doc/strategies.tex
@@ -109,10 +109,11 @@ sims := 9     0     0   0     0   10  1000      0     1      0      4
 
 Note that we explicitly (re)set all of the listed  enumerator  options
 in all of the predefined strategies, even though some of them have  no
-effect. For example, the `fill' value is irrelevant in HLT  mode.  The
-idea  behind  this  is  that,  if  you  later  change   some   options
-individually, then the enumeration retains the  \lq{}flavour'  of  the
-last selected predefined strategy.
+effect. For example,  the  `fill'  value  is  irrelevant  in  HLT-type
+enumeration (see Section~"Enumeration Style"). The idea behind this is
+that,  if  you  later  change  some  options  individually,  then  the
+enumeration retains the \lq{}flavour' of the last selected  predefined
+strategy.
 
 Note also that other options which may effect an enumeration are  left
 untouched by setting one of the predefined  strategies;  for  example,
@@ -126,43 +127,54 @@ all of the strategies are distinct, although some are very similar.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{The Strategies in Detail}
 
+Please note that the strategies  are  based  on  various  *enumeration
+styles*: *C style*, *Cr style*, *CR style*, *R  style*,  *R\*  style*,
+*Rc style*, *R/C style* and *defaulted R/C style*, all  of  which  are
+described in detail in Section~"Enumeration Style".
+
 \beginitems
 
 \>`default'{option default}@{option `default'}&
 Selects the default strategy. (Shortest abbreviation: `def'.)
 
-This   strategy   is   based   on   the   defaulted   R/C-style;   see
-Section~"Enumeration Style". The idea here is that we assume that  the
-enumeration is \lq{}easy' and start out in R-style. If  it  turns  out
-not to be easy, then  we  regard  it  as  \lq{}hard',  and  switch  to
-CR-style, after performing a lookahead on the entire table.
+This  strategy  is  based  on   the   *defaulted   R/C   style*   (see
+Section~"Enumeration Style"). The idea here is that we assume that the
+enumeration is \lq{}easy' and start out in *R style*. If it turns  out
+not to be easy, then we regard it as \lq{}hard',  and  switch  to  *CR
+style*, after performing a `lookahead' (see~"option lookahead") on the
+entire table.
 
 \>`easy'{option easy}@{option `easy'}&
-Selects an \lq{}easy' R-style strategy.
+Selects an \lq{}easy' R style strategy.
 
-If this strategy is selected, we run in R-style (i.e., HLT), but  turn
-`lookahead' and `compaction' off. For small and/or easy  enumerations,
-this mode is likely to be the fastest.
+If this strategy is selected, we follow a HLT-type enumeration  style,
+i.e. *R style* (see Section~"Enumeration Style"), but turn `lookahead'
+(see~"option lookahead") and  `compaction'  (see~"option  compaction")
+off. For small and/or easy enumerations, this strategy is likely to be
+the fastest.
 
 \>`felsch'{option felsch}@{option `felsch'}
 \>`felsch:=<val>'{option felsch}@{option `felsch'}&
 Selects a Felsch strategy; <val> should be 0 or 1. 
 (Shortest abbreviation: `fel'.)
 
-Assigning `felsch' 0 or no value selects a pure Felsch strategy, and a
-value of 1 selects a Felsch strategy with all relators in the subgroup
-(`no = -1') and turns gap-`fill'ing on.
+Here a *C style*  (see  Section~"Enumeration  Style")  enumeration  is
+selected. Assigning `felsch' 0 or  no  value  selects  a  pure  Felsch
+strategy, and a value of 1 selects a Felsch strategy with all relators
+in  the  subgroup,  i.e.~`no'${}=-1$  (see~"option  no"),  and   turns
+gap-`fill'ing (see "option fill") on.
 
 \>`hard'{option hard}@{option `hard'}&  
-Selects a mixed R-style and C-style strategy.
+Selects a mixed *R style* and *C style* strategy.
 
-In many \lq{}hard' enumerations, a  mixture  of  R-style  and  C-style
-definitions, all tested in all  essentially  different  positions,  is
-appropriate. This option selects such a mixed strategy. The idea  here
-is that most of the work is done C-style (with  the  relators  in  the
-subgroup (`no = -1') and with gap-`fill'ing active),  but  that  every
-$1000$ C-style definitions a further coset number is  applied  to  all
-relators.
+In many \lq{}hard' enumerations, a mixture of *R style* and *C  style*
+(see Section~"Enumeration  Style")  definitions,  all  tested  in  all
+essentially different positions, is appropriate. This  option  selects
+such a mixed strategy. The idea here is that most of the work is  done
+C  style  (with  the  relators  in  the   subgroup,   i.e.~`no'${}=-1$
+(see~"option no"), and with gap-`fill'ing (see "option fill") on), but
+that every $1000$ C  style  definitions  a  further  coset  number  is
+applied to all relators.
 
 *Guru  Notes:*
 The $1000/1$ mix is not necessarily optimal, and some  experimentation
@@ -170,38 +182,44 @@ may be needed  to  find  an  acceptable  balance  (see,  for  example,
 \cite{HR99b}). Note also that, the longer  the  total  length  of  the
 presentation, the more work needs to be done  for  each  coset  number
 application to the relators; one coset number application  can  result
-in more than $1000$ definitions, reversing the balance between R-style
-and C-style definitions.
+in more than $1000$ definitions, reversing the balance between R style
+and C style definitions.
 
 \>`hlt'{option hlt}@{option `hlt'}&
 Selects the standard HLT strategy.
 
-\>`purec'{option purec}@{option `purec'}&
-Sets the strategy to basic C-style (coset table based).
+This is an *R style* (see Section~"Enumeration Style") strategy.
 
-In this strategy there is no `compaction',  no  gap-`fill'ing  and  no
-relators in subgroup (`no = 0').
+\>`purec'{option purec}@{option `purec'}&
+Sets the strategy to basic *C style* (see Section~"Enumeration  Style").
+
+In this strategy there is no `compaction'  (see~"option  compaction"),
+no gap-`fill'ing (see "option fill")  and  no  relators  in  subgroup,
+i.e.~`no'${}=0$ (see~"option no").
 
 \>`purer'{option purer}@{option `purer'}&
-Sets the strategy  to basic R-style (relator based).
+Sets the strategy  to basic *R style* (see Section~"Enumeration  Style").
 
-In this  strategy  there  is  no  `mendelsohn',  no  `compaction',  no
-`lookahead' and no `row'-filling.
+In this strategy there is no `mendelsohn' (see  "option  mendelsohn"),
+no `compaction' (see~"option compaction"), no `lookahead' (see~"option
+lookahead") and no `row'-filling (see "option row").
 
 \>`sims:=<val>'{option sims}@{option `sims'}&
 Sets a Sims strategy; <val> should be one of 1, 3, 5, 7 or 9.
 
 In his book~\cite{Sim94},  Sims  discusses  ten  standard  enumeration
-strategies. These are effectively HLT (with and  without  `mendelsohn'
-set -- see~"option mendelsohn") and Felsch, all either with or without
-table standardisation as the enumeration  proceeds.  {\ACE}  does  not
-implement  table  standardisation  during  an  enumeration,   although
-incomplete tables can be standardised and  an  enumeration  continued.
-The five odd-numbered non-standardising strategies of~\cite{Sim94} are
-implemented ({\ACE}'s numbering is the same as  given  in  Section~5.5
-of~\cite{Sim94}).  With  care,  it  is  possible  to   duplicate   the
-statistics  given  in~\cite{Sim94};  some  examples   are   given   in
-Appendix~"Examples". % again, in the appendix ...
+strategies; these are effectively `hlt' (see~"option hlt"),  with  and
+without  `mendelsohn'  (see~"option  mendelsohn")  set,  and  `felsch'
+(see~"option felsch"), all either with  or  without  (`lenlex')  table
+standardisation (see Section~"Coset Table Standardisation Schemes") as
+the  enumeration   proceeds.   {\ACE}   does   not   implement   table
+standardisation during an enumeration, although incomplete tables  can
+be standardised  and  an  enumeration  continued.  The  `sims'  option
+implements  the   five   odd-numbered   non-standardising   strategies
+of~\cite{Sim94}  ({\ACE}'s  numbering  is  the  same   as   given   in
+Section~5.5 of~\cite{Sim94}). With care, it is possible  to  duplicate
+the statistics given  in~\cite{Sim94};  some  examples  are  given  in
+Appendix~"Examples".
 
 \enditems
 
